--- a/src/main/archetype/ui.apps/pom.xml
+++ b/src/main/archetype/ui.apps/pom.xml
@@ -166,13 +166,18 @@
                     <group>${packageGroup}</group>
                     <embeddeds>
                         <embedded>
-                            <groupId>${groupId}</groupId>
-                            <artifactId>${rootArtifactId}.core</artifactId>
+                            <groupId>org.apache.commons</groupId>
+                            <artifactId>commons-pool2</artifactId>
                             <target>/apps/${appsFolderName}/install</target>
                         </embedded>
                         <embedded>
                             <groupId>com.sinnerschrader.aem.react</groupId>
                             <artifactId>core</artifactId>
+                            <target>/apps/${appsFolderName}/install</target>
+                        </embedded>
+                        <embedded>
+                            <groupId>${groupId}</groupId>
+                            <artifactId>${rootArtifactId}.core</artifactId>
                             <target>/apps/${appsFolderName}/install</target>
                         </embedded>
                     </embeddeds>
@@ -194,9 +199,15 @@
         <dependency>
             <groupId>com.sinnerschrader.aem.react</groupId>
             <artifactId>core</artifactId>
-            <version>0.3.0</version>
+            <version>0.3.1</version>
         </dependency>
 
+          <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.4.2</version>
+          </dependency>
+      
         <dependency>
             <groupId>com.adobe.aem</groupId>
             <artifactId>aem-api</artifactId>
