--- a/src/main/archetype/ui.apps/src/main/ts/tsconfig.json
+++ b/src/main/archetype/ui.apps/src/main/ts/tsconfig.json
@@ -13,14 +13,8 @@
     "./references.d.ts",
     "./client.tsx",
     "./server.tsx",
-    "cityfinder/CityFinder.tsx",
-    "cityfinder/CityListView.tsx",
-    "cityfinder/CityView.tsx",
-    "./vanilla/TextField.tsx",
     "./text/text.tsx",
-    "./embedded/embedded.tsx",
-    "./accordion/accordion-element.tsx",
-    "./accordion/accordion.tsx",
+    "./vanilla/Panel.tsx",
     "./componentRegistry.tsx"
   ]
 }
