--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
   <groupId>com.sinnerschrader.aem.react</groupId>
   <artifactId>aem-project-archetype</artifactId>
-  <version>10.0</version>
+  <version>10.1-SNAPSHOT</version>
   <packaging>maven-archetype</packaging>
 
   <name>AEM and React Multi-Module Archetype</name>
@@ -29,7 +29,7 @@
       <connection>scm:git:https://github.com/sinnerschrader/aem-project-archetype.git</connection>
       <developerConnection>scm:git:https://github.com/sinnerschrader/aem-project-archetype.git</developerConnection>
       <url>https://github.com/Adobe-Marketing-Cloud/sinnerschrader/tree/master/</url>
-      <tag>aem-project-archetype-10.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
   <build>
