--- a/pom.xml
+++ b/pom.xml
@@ -1,123 +1,127 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-| Copyright 2015 Adobe Systems Incorporated
-|
-| Licensed under the Apache License, Version 2.0 (the "License");
-| you may not use this file except in compliance with the License.
-| You may obtain a copy of the License at
-|
-| http://www.apache.org/licenses/LICENSE-2.0
-|
-| Unless required by applicable law or agreed to in writing, software
-| distributed under the License is distributed on an "AS IS" BASIS,
-| WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-| See the License for the specific language governing permissions and
-| limitations under the License.
--->
+<!-- | Copyright 2015 Adobe Systems Incorporated | | Licensed under the Apache License, Version 2.0 (the "License"); | you may not use this file except in compliance 
+    with the License. | You may obtain a copy of the License at | | http://www.apache.org/licenses/LICENSE-2.0 | | Unless required by applicable law or agreed to in 
+    writing, software | distributed under the License is distributed on an "AS IS" BASIS, | WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
+    | See the License for the specific language governing permissions and | limitations under the License. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.sinnerschrader.aem.react</groupId>
-  <artifactId>aem-project-archetype</artifactId>
-  <version>10.1-SNAPSHOT</version>
-  <packaging>maven-archetype</packaging>
+    <groupId>com.sinnerschrader.aem.react</groupId>
+    <artifactId>aem-project-archetype</artifactId>
+    <version>10.1-SNAPSHOT</version>
+    <packaging>maven-archetype</packaging>
 
-  <name>AEM and React Multi-Module Archetype</name>
-  <description>AEM and React multi-module archetype.</description>
+    <name>AEM and React Multi-Module Archetype</name>
+    <description>React AEM archetype. Fork of AEM multi-module archetype.</description>
+    <url>www.github.com/sinnerschrader/aem-project-archetype</url>
 
-  <scm>
-      <connection>scm:git:https://github.com/sinnerschrader/aem-project-archetype.git</connection>
-      <developerConnection>scm:git:https://github.com/sinnerschrader/aem-project-archetype.git</developerConnection>
-      <url>https://github.com/Adobe-Marketing-Cloud/sinnerschrader/tree/master/</url>
-      <tag>HEAD</tag>
-  </scm>
+    <licenses>
+        <license>
+            <name>MIT</name>
+        </license>
+    </licenses>
+    
+    <developers>
+        <developer>
+            <name>Stefan Meyer</name>
+            <email>stefan.meyer@sinnerschrader.com</email>
+        </developer>
+    </developers>
 
-  <build>
-    <extensions>
-      <extension>
-        <groupId>org.apache.maven.archetype</groupId>
-        <artifactId>archetype-packaging</artifactId>
-        <version>2.2</version>
-      </extension>
-    </extensions>
 
-    <plugins>
-      <plugin>
-        <artifactId>maven-resources-plugin</artifactId>
-        <version>2.6</version>
-        <executions>
-          <execution>
-            <!-- #43134 - Unable to checkout Granite on Windows -->
-            <id>copy-archetype-resources</id>
-            <phase>process-resources</phase>
-            <goals>
-              <goal>copy-resources</goal>
-            </goals>
-            <configuration>
-              <outputDirectory>${project.build.outputDirectory}/archetype-resources</outputDirectory>
-              <resources>
-                <resource>
-                  <directory>src/main/archetype</directory>
-                </resource>
-              </resources>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-checkstyle-plugin</artifactId>
-            <version>2.15</version>
-            <configuration>
-                <includes>**\/*.java,**\/*.xml</includes>
-                <sourceDirectory>src/main/archetype</sourceDirectory>
-                <configLocation>src/main/resources/checkstyle.xml</configLocation>
-                <encoding>UTF-8</encoding>
-                <consoleOutput>true</consoleOutput>
-                <failsOnError>true</failsOnError>
-                <linkXRef>false</linkXRef>
-            </configuration>
-            <executions>
-                <execution>
-                    <id>checkstyle</id>
-                    <phase>verify</phase>
-                    <goals>
-                        <goal>check</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-release-plugin</artifactId>
-            <version>2.5.2</version>
-        </plugin>
-    </plugins>
+    <scm>
+        <connection>scm:git:https://github.com/sinnerschrader/aem-project-archetype.git</connection>
+        <developerConnection>scm:git:https://github.com/sinnerschrader/aem-project-archetype.git</developerConnection>
+        <url>https://github.com/sinnerschrader/aem-project-archetype.git</url>
+        <tag>HEAD</tag>
+    </scm>
 
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <artifactId>maven-archetype-plugin</artifactId>
-          <version>2.2</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
+    <build>
+        <extensions>
+            <extension>
+                <groupId>org.apache.maven.archetype</groupId>
+                <artifactId>archetype-packaging</artifactId>
+                <version>2.2</version>
+            </extension>
+        </extensions>
 
-  <distributionManagement>
-    <repository>
-      <id>ossrh</id>
-      <name>sonatype-nexus-staging</name>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
-    </repository>
-    <snapshotRepository>
-      <id>ossrh</id>
-      <name>Sonatype Nexus Snapshots</name>
-      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-    </snapshotRepository>
-  </distributionManagement>
-  
-  <properties>
-      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+        <plugins>
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.6</version>
+                <executions>
+                    <execution>
+                        <!-- #43134 - Unable to checkout Granite on Windows -->
+                        <id>copy-archetype-resources</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.outputDirectory}/archetype-resources</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>src/main/archetype</directory>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>2.15</version>
+                <configuration>
+                    <includes>**\/*.java,**\/*.xml</includes>
+                    <sourceDirectory>src/main/archetype</sourceDirectory>
+                    <configLocation>src/main/resources/checkstyle.xml</configLocation>
+                    <encoding>UTF-8</encoding>
+                    <consoleOutput>true</consoleOutput>
+                    <failsOnError>true</failsOnError>
+                    <linkXRef>false</linkXRef>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>checkstyle</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.2</version>
+            </plugin>
+        </plugins>
+
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-archetype-plugin</artifactId>
+                    <version>2.2</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+
+    <distributionManagement>
+        <repository>
+            <id>ossrh</id>
+            <name>sonatype-nexus-staging</name>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+        </repository>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <name>Sonatype Nexus Snapshots</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 </project>
