--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>com.sinnerschrader.aem.react</groupId>
     <artifactId>aem-project-archetype</artifactId>
-    <version>10.2-SNAPSHOT</version>
+    <version>10.2</version>
     <packaging>maven-archetype</packaging>
 
     <name>AEM and React Multi-Module Archetype</name>
@@ -33,7 +33,7 @@
         <connection>scm:git:https://github.com/sinnerschrader/aem-project-archetype.git</connection>
         <developerConnection>scm:git:https://github.com/sinnerschrader/aem-project-archetype.git</developerConnection>
         <url>https://github.com/sinnerschrader/aem-project-archetype.git</url>
-        <tag>HEAD</tag>
+        <tag>aem-project-archetype-10.2</tag>
     </scm>
 
     <build>
